--- a/app/src/main/res/layout/fragment_comment_item.xml
+++ b/app/src/main/res/layout/fragment_comment_item.xml
@@ -7,8 +7,7 @@
     android:layout_height="160dp"
     android:layout_margin="10dp"
     app:cardCornerRadius="25dp"
-    app:cardElevation="30dp"
-    >
+    app:cardElevation="5dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -50,17 +49,45 @@
             android:text="TextView"
             android:textColor="#000000" />
 
-        <TextView
-            android:id="@+id/eventCommentDateTime"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
-            android:text="TextView" />
+            android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/eventCommentLocation"
+            <TextView
+                android:id="@+id/textView22"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/commentsLocationLabel"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/eventCommentLocation"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="TextView" />
+        </LinearLayout>
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="TextView" />
+            android:layout_marginTop="5dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/textView16"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/commentsDatetimeLabel"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/eventCommentDateTime"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="TextView" />
+        </LinearLayout>
+
     </LinearLayout>
 </androidx.cardview.widget.CardView>
